--- a/style.css
+++ b/style.css
@@ -1,14 +1,23 @@
 body {
     display: flex;
     flex-direction: column;
+    align-items: center;
 }
-#mainBox{
-    width: 100px;
-    height: 100px;
+
+#mainBox {
     display: flex;
-    flex-grow: inherit;
-    flex-direction: column;
+    flex: auto;
+    flex-wrap: wrap;
     flex-direction: row;
-    border: black solid;
+    border: solid black;
     border-radius: 1px;
+    height: 800px;
+    width: 800px;
+}
+
+.square {
+    flex: auto;
+    border: solid rgb(10, 10, 4);
+    background-color: rgb(201, 74, 42);
+    box-sizing: border-box;
 }
